Compiler/tests/bad/Functions/02_function.rs
// while context

fn add() -> i32
{
    return 0;
}

fn main(){
  add(5);
}